k8s/basketservice-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basketservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basketservice
  template:
    metadata: 
      labels:
        app: basketservice
    spec:
      containers:
        - name: basketservice
          image: btrlpuyr/basketservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: basketservice-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: basketservice
  ports:
    - name: basketservice
      protocol: TCP
      port: 8080
      targetPort: 8080
