k8s/basketservice-np-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: basketservicenpservice-srv
spec:
  type: NodePort
  selector:
    app: basketservice
  ports:
    - name: basketservice
      protocol: TCP
      port: 80
      targetPort: 80
