k8s/catalogservice-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogservice
  template:
    metadata: 
      labels:
        app: catalogservice
    spec:
      containers:
        - name: catalogservice
          image: btrlpuyr/catalogservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: catalogservice-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: catalogservice
  ports:
    - name: catalogservice
      protocol: TCP
      port: 8080
      targetPort: 8080
