k8s/catalogservice-np-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: catalogservice-np-srv
spec:
  type: NodePort
  selector:
    app: catalogservice
  ports:
    - name: catalogservice
      protocol: TCP
      port: 80
      targetPort: 80
