k8s/fileservice-np-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: fileservice-np-srv
spec:
  type: NodePort
  selector:
    app: fileservice
  ports:
    - name: fileservice
      protocol: TCP
      port: 80
      targetPort: 80
