k8s/identityservice-np-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: identityservice-np-srv
spec:
  type: NodePort
  selector:
    app: identityservice
  ports:
    - name: identityservice
      protocol: TCP
      port: 80
      targetPort: 80
