k8s/mssql-deply.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deply
spec:
  selector:
    matchLabels:
      app: mssql
  replicas: 1
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1434
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: mssqldb     
      volumes:
        - name: mssqldb
          persistentVolumeClaim:
            claimName: mssql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: mssql
  ports:
    - name: mssql
      protocol: TCP
      port: 1434
      targetPort: 1434
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer
spec:
  type: LoadBalancer
  selector: 
    app: mssql
  ports:
    - protocol: TCP
      port: 1434
      targetPort: 1434
