k8s/orderingservice-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderingservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderingservice
  template:
    metadata: 
      labels:
        app: orderingservice
    spec:
      containers:
        - name: orderingservice
          image: btrlpuyr/orderingservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: orderingservice-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: orderingservice
  ports:
    - name: orderingservice
      protocol: TCP
      port: 8080
      targetPort: 8080
