k8s/orderingservice-np-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: orderingservice-np-srv
spec:
  type: NodePort
  selector:
    app: orderingservice
  ports:
    - name: orderingservice
      protocol: TCP
      port: 80
      targetPort: 80
