k8s/paymentservice-np-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: paymentservice-np-srv
spec:
  type: NodePort
  selector:
    app: paymentservice
  ports:
    - name: paymentservice
      protocol: TCP
      port: 80
      targetPort: 80
