k8s/webgateway-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webgateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webgateway
  template:
    metadata: 
      labels:
        app: webgateway
    spec:
      containers:
        - name: webgateway
          image: btrlpuyr/webgateway:latest
---
apiVersion: v1
kind: Service
metadata:
  name: webgateway-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: webgateway
  ports:
    - name: webgateway
      protocol: TCP
      port: 80
      targetPort: 80
