k8s/basketservice-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basketservice-ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 32k
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
spec:
  ingressClassName: nginx
  rules:
    - host: basketservice.onlineshop.com
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: basketservice-clusterip-srv
                port:
                  number: 8080
