k8s/identityservice-ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identityservice-ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: identity.com
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identityservice-clusterip-srv
                port:
                  number: 80
