k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/user-regex: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths: 
          - path: /api/basket-service
            pathType: Prefix
            backend:
              service:
                name: basketservice-clusterip-srv
                port:
                  number: 80
